removing Heroku notice

--- a/public/views/todo.html
+++ b/public/views/todo.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="text-center text-muted">
-      <p>A demo by <a href="http://codemartians.com">Code Martians</a>.</p>
+      <p>A demo by <a href="http://go2group.com">Go2Group</a>.</p>
 
     </div>
 
