--- a/public/views/float.html
+++ b/public/views/float.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <style>
     html          { overflow-y:scroll; }
-    body          { padding-top:50px; }
+    body          { background-color: #000; padding-top:50px; }
     #pool-list        { margin-bottom:30px; }
     #pool-form        { margin-bottom:50px; }
   </style>
@@ -29,6 +29,26 @@
 </head>
 <!-- SET THE CONTROLLER -->
 <body ng-controller="floatController">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+   <div class="container">
+<div class="navbar-header">
+ <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+   <span class="sr-only">Toggle navigation</span>
+   <span class="icon-bar"></span>
+   <span class="icon-bar"></span>
+   <span class="icon-bar"></span>
+ </button>
+ <a class="navbar-brand" href="/">Sulaco</a>
+</div>
+<div id="navbar" class="collapse navbar-collapse">
+ <ul class="nav navbar-nav">
+   <li class="active"><a href="/">Home</a></li>
+   <li><a href="#about">About</a></li>
+   <li><a href="#contact">Media</a></li>
+ </ul>
+</div><!--/.nav-collapse -->
+   </div>
+ </nav>
   <div class="container">
 
   <div ng-repeat="pool in pools">
@@ -45,8 +65,6 @@
     <!-- pool LIST -->
     <div id="pool-list" class="row">
       <div class="col-sm-4 col-sm-offset-4">
-
-
 
         <!-- LOOP OVER THE poolS IN $scope.pools -->
         <div class="checkbox">
